Update information after Master graduation

--- a/index.html
+++ b/index.html
@@ -112,13 +112,23 @@
             <div class="w-full flex flex-col-reverse md:flex-row items-center gap-12 lg:gap-16">
                 <div class="md:w-2/3">
                     <h1 class="text-4xl md:text-6xl font-bold text-slate-800 leading-tight">Jeonghyeon Kim</h1>
-                    <div class="mt-8 text-lg md:text-xl text-slate-600 max-w-3xl space-y-4">
+                    <div class="mt-8 text-lg md:text-xl text-slate-600 max-w-3xl space-y-6">
                         <p>
-                            I am a <strong class="text-slate-700">Master’s degree candidate</strong> at the <a href="https://www.kaist.ac.kr" target="_blank" class="text-teal-600 hover:underline font-medium">KAIST Graduate School of AI Semiconductor</a>, currently advised by <a href="https://jongse-park.github.io/" target="_blank" class="text-teal-600 hover:underline font-medium">Prof. Jongse Park</a> in the School of Computing. From March 2024 to July 2025, I was fortunate to be advised by <a href="https://cp.kaist.ac.kr/jeehoon.kang/" target="_blank" class="text-teal-600 hover:underline font-medium">Prof. Jeehoon Kang</a> in the Concurrency and Parallelism Laboratory. I earned my Bachelor’s degree in Computer Science from the University of Seoul, graduating as the Salutatorian (Second Highest Distinction).
+                            I am a <strong class="text-slate-700">Ph.D. student</strong> at <a href="https://www.kaist.ac.kr" target="_blank" class="text-teal-600 hover:underline font-medium">KAIST</a>, currently advised by <a href="https://sites.google.com/view/yjkwon/home" target="_blank" class="text-teal-600 hover:underline font-medium">Prof. Youngjin Kwon</a> in the School of Computing.
                         </p>
-                        <p>
-                            My research interests lie at the intersection of concurrent systems and formal methods. I focus on developing practical <strong>concurrent memory reclamation</strong> techniques and <strong>formally verifying</strong> the correctness of critical distributed systems. You can find more details about my projects below.
-                        </p>
+                        <ul class="list-disc list-outside ml-6 space-y-3 text-base md:text-lg">
+                            <li>
+                                <strong>Ph.D. in Computer Science</strong>, KAIST, Feb 2026 – Present
+                            </li>
+                            <li>
+                                <strong>M.S. in AI Semiconductor</strong>, KAIST, Mar 2024 – Feb 2026 <br>
+                                <span class="text-slate-500 text-sm">Advised by <a href="https://jongse-park.github.io/" target="_blank" class="text-teal-600 hover:underline">Prof. Jongse Park</a> and <a href="https://cp.kaist.ac.kr/jeehoon.kang/" target="_blank" class="text-teal-600 hover:underline">Prof. Jeehoon Kang</a></span>
+                            </li>
+                            <li>
+                                <strong>B.S. in Computer Science</strong>, University of Seoul, Mar 2016 – Aug 2022 <br>
+                                <span class="text-slate-500 text-sm">Salutatorian (Second Highest Distinction)</span>
+                            </li>
+                        </ul>
                     </div>
                     <div class="mt-10 flex flex-wrap gap-4">
                         <a href="mailto:jeonghyeon.kim@kaist.ac.kr" class="inline-flex items-center gap-2 bg-teal-600 text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-teal-700 transition-colors">
@@ -144,7 +154,9 @@
         <!-- Research Section -->
         <section id="research" class="py-16 md:py-24">
             <h2 class="text-3xl font-bold text-slate-800 mb-2">Research Interests</h2>
-            <p class="text-lg text-slate-500 mb-12">This section introduces my main research areas. I am focused on enhancing the performance of concurrent systems and ensuring the reliability of distributed systems through rigorous verification.</p>
+            <p class="text-lg text-slate-500 mb-12">
+                My research interests lie at the intersection of concurrent systems and formal methods. I focus on developing practical <strong>concurrent memory reclamation</strong> techniques and <strong>formally verifying</strong> the correctness of critical distributed systems.
+            </p>
             <div class="space-y-8">
                 <div class="bg-white p-8 rounded-xl shadow-sm card-hover">
                     <h3 class="text-2xl font-semibold text-slate-800 mb-4">Concurrent Memory Reclamation</h3>
@@ -175,6 +187,14 @@
             <h2 class="text-3xl font-bold text-slate-800 mb-2">Selected Publications</h2>
              <p class="text-lg text-slate-500 mb-12">Here are some of my key publications. Each represents a significant step in my research journey, exploring various facets of concurrency and system verification.</p>
             <div class="space-y-8">
+                <div class="bg-white p-6 rounded-lg shadow-sm card-hover">
+                    <h4 class="font-semibold text-slate-800 text-lg">Compositional Model-Driven Verification of Weakly Consistent Distributed Systems</h4>
+                    <p class="text-slate-500 mt-1">Bryant J Curto, <strong class="text-slate-700">Jeonghyeon Kim</strong>, Alan Wang, Gijung Im, Jieung Kim, Jeehoon Kang, Ji-Yong Shin.</p>
+                    <p class="text-teal-600 font-medium mt-2">PLOS 2026</p>
+                    <div class="mt-4 flex flex-wrap gap-3">
+                        <a href="https://doi.org/10.1145/3764860.3768331" target="_blank" class="text-sm inline-flex items-center gap-1.5 bg-slate-100 text-slate-600 font-medium py-1 px-3 rounded-full hover:bg-slate-200 transition-colors">DOI</a>
+                    </div>
+                </div>
                 <div class="bg-white p-6 rounded-lg shadow-sm card-hover">
                     <h4 class="font-semibold text-slate-800 text-lg">Leveraging Immutability to Validate Hazard Pointers for Optimistic Traversals</h4>
                     <p class="text-slate-500 mt-1">Janggun Lee, <strong class="text-slate-700">Jeonghyeon Kim</strong>, Jeehoon Kang.</p>
@@ -266,7 +286,7 @@
     
     <footer class="border-t border-slate-200">
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-6 text-center text-slate-500">
-            <p>&copy; 2025 Jeonghyeon Kim. All rights reserved.</p>
+            <p>&copy; 2026 Jeonghyeon Kim. All rights reserved.</p>
         </div>
     </footer>
 
