Revise texts more direct and brief

--- a/index.html
+++ b/index.html
@@ -154,27 +154,27 @@
         <section id="research" class="py-16 md:py-24">
             <h2 class="text-3xl font-bold text-stone-800 mb-2">Research Interests</h2>
             <p class="text-lg text-stone-600 leading-relaxed mb-12">
-                My research interests lie at the intersection of concurrent systems and formal methods. I focus on developing practical <strong>concurrent memory reclamation</strong> techniques and <strong>formally verifying</strong> the correctness of critical distributed systems.
+                My research focuses on <strong>concurrent memory reclamation</strong> and <strong>formal verification</strong> of distributed systems.
             </p>
             <div class="space-y-8">
                 <div class="bg-white p-8 rounded-xl shadow-sm border border-stone-200 card-hover">
                     <h3 class="text-2xl font-semibold text-stone-800 mb-4">Concurrent Memory Reclamation</h3>
                     <div class="space-y-4 text-stone-600">
-                        <p>My work involves designing practical and efficient memory reclamation methods for highly concurrent systems. I started this journey by contributing to the HP++ project, an extension of Hazard Pointers.</p>
-                        <p>Building on that, I developed a novel Safe Memory Reclamation (SMR) scheme that combines classical Hazard Pointers with bounded RCU critical sections. This work enhances the balance between memory footprint and efficiency and was recognized with a <strong class="text-teal-600">Best Paper Award at SPAA 2024</strong>.</p>
+                        <p>I design efficient memory reclamation methods for concurrent systems. My initial work contributed to HP++, an extension of Hazard Pointers (<strong class="text-teal-600">SPAA 2023</strong>).</p>
+                        <p>I developed a Safe Memory Reclamation (SMR) scheme combining Hazard Pointers with bounded RCU critical sections, improving the trade-off between memory footprint and performance (<strong class="text-teal-600">Best Paper Award, SPAA 2024</strong>).</p>
                         <div>
-                            <h4 class="font-semibold text-stone-700">Ongoing Project:</h4>
-                            <p>I am currently developing a lock-free, precise garbage collection library with a focus on safety, efficiency, and seamless system integration.</p>
+                            <h4 class="font-semibold text-stone-700">Ongoing:</h4>
+                            <p>Developing a lock-free, precise garbage collection library.</p>
                         </div>
                     </div>
                 </div>
                 <div class="bg-white p-8 rounded-xl shadow-sm border border-stone-200 card-hover">
                     <h3 class="text-2xl font-semibold text-stone-800 mb-4">Formal Verification of Distributed Systems</h3>
                     <div class="space-y-4 text-stone-600">
-                        <p>I focus on creating practical methodologies for formally verifying weakly consistent distributed systems to ensure both safety and liveness properties.</p>
+                        <p>I develop methodologies for formally verifying weakly consistent distributed systems, ensuring both safety and liveness properties.</p>
                         <div>
-                            <h4 class="font-semibold text-stone-700">Ongoing Project:</h4>
-                            <p>I am a contributor to a novel top-down verification framework for weakly consistent systems, collaborating with researchers from Northeastern and Yonsei University. My role is centered on defining and proving key liveness properties, such as convergence and availability. This includes what we believe is the first formalization and verification of availability in this context.</p>
+                            <h4 class="font-semibold text-stone-700">Ongoing:</h4>
+                            <p>Contributing to a top-down verification framework for weakly consistent systems (with Northeastern and Yonsei University). I focus on liveness properties such as convergence and availability, including the first known formalization of availability in this context.</p>
                         </div>
                     </div>
                 </div>
@@ -183,8 +183,7 @@
 
         <!-- Publications Section -->
         <section id="publications" class="py-16 md:py-24">
-            <h2 class="text-3xl font-bold text-stone-800 mb-2">Selected Publications</h2>
-            <p class="text-lg text-stone-500 mb-12">Here are some of my key publications. Each represents a significant step in my research journey, exploring various facets of concurrency and system verification.</p>
+            <h2 class="text-3xl font-bold text-stone-800 mb-12">Selected Publications</h2>
             <div class="space-y-8">
                 <div class="bg-white p-6 rounded-lg shadow-sm border border-stone-200 card-hover">
                     <h4 class="font-semibold text-stone-800 text-lg">Compositional Model-Driven Verification of Weakly Consistent Distributed Systems</h4>
@@ -241,15 +240,14 @@
 
         <!-- Awards Section -->
         <section id="awards" class="py-16 md:py-24">
-            <h2 class="text-3xl font-bold text-stone-800 mb-2">News & Awards</h2>
-            <p class="text-lg text-stone-500 mb-12">This timeline highlights key moments and recognitions throughout my academic and competitive programming journey.</p>
+            <h2 class="text-3xl font-bold text-stone-800 mb-12">News & Awards</h2>
             <div class="relative pl-8">
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content relative pb-12">
                         <p class="text-sm text-stone-400 mb-1">June 2024</p>
                         <h4 class="font-semibold text-lg text-stone-800">Best Paper Award</h4>
-                        <p class="text-stone-600">Our paper, "Expediting Hazard Pointers with Bounded RCU Critical Sections," received the Best Paper Award at SPAA 2024.</p>
+                        <p class="text-stone-600">"Expediting Hazard Pointers with Bounded RCU Critical Sections" at SPAA 2024.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -257,7 +255,7 @@
                     <div class="timeline-content relative pb-12">
                         <p class="text-sm text-stone-400 mb-1">December 2022</p>
                         <h4 class="font-semibold text-lg text-stone-800">2nd Place</h4>
-                        <p class="text-stone-600">Awarded 2nd Place in the Goorm Algorithm Monday Challenge.</p>
+                        <p class="text-stone-600">Goorm Algorithm Monday Challenge.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -265,15 +263,15 @@
                     <div class="timeline-content relative pb-12">
                         <p class="text-sm text-stone-400 mb-1">August 2022</p>
                         <h4 class="font-semibold text-lg text-stone-800">Salutatorian (Second Highest Distinction)</h4>
-                        <p class="text-stone-600">Graduated with the second-highest academic standing from the University of Seoul.</p>
+                        <p class="text-stone-600">University of Seoul, B.S. in Computer Science.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content relative pb-12">
                         <p class="text-sm text-stone-400 mb-1">July 2022</p>
-                        <h4 class="font-semibold text-lg text-stone-800">The Encouragement Award</h4>
-                        <p class="text-stone-600">Received at the '22 Hyundai Mobis Algorithm Competition.</p>
+                        <h4 class="font-semibold text-lg text-stone-800">Encouragement Award</h4>
+                        <p class="text-stone-600">Hyundai Mobis Algorithm Competition.</p>
                     </div>
                 </div>
             </div>
