--- a/index.html
+++ b/index.html
@@ -161,23 +161,23 @@
                         </ul>
                     </div>
                     <div class="mt-10 flex flex-wrap gap-4">
-                        <a href="mailto:jeonghyeon.kim@kaist.ac.kr" class="inline-flex items-center gap-2 bg-teal-600 text-white font-semibold py-2 px-5 rounded-lg shadow-md hover:bg-teal-700 transition-colors">
+                        <a href="mailto:jeonghyeon.kim@kaist.ac.kr" class="inline-flex items-center gap-1.5 bg-teal-600 text-white font-medium py-1.5 px-3 rounded-lg shadow-md hover:bg-teal-700 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                             Email Me
                         </a>
-                        <a href="https://orcid.org/0009-0000-7070-3578" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 bg-stone-200 text-stone-700 font-semibold py-2 px-5 rounded-lg hover:bg-stone-300 transition-colors">
+                        <a href="https://orcid.org/0009-0000-7070-3578" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-1.5 bg-stone-200 text-stone-700 font-medium py-1.5 px-3 rounded-lg hover:bg-stone-300 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/><circle cx="12" cy="10" r="3"/><circle cx="12" cy="12" r="10"/></svg>
                             ORCID
                         </a>
-                        <a href="files/cv.pdf" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 bg-stone-200 text-stone-700 font-semibold py-2 px-5 rounded-lg hover:bg-stone-300 transition-colors">
+                        <a href="files/cv.pdf" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-1.5 bg-stone-200 text-stone-700 font-medium py-1.5 px-3 rounded-lg hover:bg-stone-300 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
                             CV
                         </a>
-                        <a href="https://scholar.google.com/citations?user=bs0LeioAAAAJ" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 bg-stone-200 text-stone-700 font-semibold py-2 px-5 rounded-lg hover:bg-stone-300 transition-colors">
+                        <a href="https://scholar.google.com/citations?user=bs0LeioAAAAJ" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-1.5 bg-stone-200 text-stone-700 font-medium py-1.5 px-3 rounded-lg hover:bg-stone-300 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg>
                             Scholar
                         </a>
-                        <a href="https://github.com/powergee" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-2 bg-stone-200 text-stone-700 font-semibold py-2 px-5 rounded-lg hover:bg-stone-300 transition-colors">
+                        <a href="https://github.com/powergee" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-1.5 bg-stone-200 text-stone-700 font-medium py-1.5 px-3 rounded-lg hover:bg-stone-300 transition-colors">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                             GitHub
                         </a>
